# sqlpilot

./: .gitignore  COPYING  Makefile  Makefile.am  Makefile.decl  README  autogen.sh  config.mk  configure.ac  logbook.sql  rm_non_scm.sh  sqlpilot.rb  todo.txt
data/: Makefile.am  sqlpilot.desktop  sqlpilot.service
data/help/en_US/: SqlPilot.xml
data/style/: summary.css
data/ui/: aircraft_fields.xml  airline_flight_fields.xml  airport_fields.xml  application.xml  book.xml  browser.xml  editor.xml  filters.xml  flight_fields.xml  flight_fields_airline.xml  flight_fields_ga.xml  flight_toolbar.xml  glide_editor.xml  gtk_full.glade  hildon_nokia.glade  interface.xml  join_table_editor.xml  logbook.xml  model_fields.xml  nokia.glade  role_fields.xml  sqlpilot.glade  table_editor.xml  tag_chooser.xml
db/: logbook.sql  migrate_models.sql  migrate_reports.sql  migrate_routing.sql
db/airports/: airports.awk  airports.csv
debian/: control  copyright  rules  sqlpilot.install  sqlpilot.links
gtk/: FlightEditor.vala  Makefile.am  about.vala  aircraftbrowser.vala  aircrafteditor.vala  aircraftfields.vala  airlineflightfields.vala  airportbrowser.vala  airporteditor.vala  airportfields.vala  application.vala  approacheditor.vala  approachtypeeditor.vala  approachview.vala  book.vala  browser.vala  cbflightfieldsairline.vala  component.vala  crewchooser.vala  editor.vala  fieldset.vala  filters.vala  filtertree.vala  flightbrowser.vala  flighteditor.vala  flightfields.vala  glideeditor.vala  glideview.vala  gui.vala  holdeditor.vala  holdview.vala  idtreemodelfilter.vala  jointableeditor.vala  landingeditor.vala  landingview.vala  launchtypeeditor.vala  logbook.vala  main.vala  mainwindow.vala  modelbrowser.vala  (+24 more)
import/: .gitignore  Makefile.am  importer.vala
libcsv/: .gitignore  Makefile.am  ccsv.c  ccsv.vapi  csv.vala  test.vala
libsqlpilot/: .gitignore  Makefile.am  aircraft.vala  aircraftcrud.vala  aircrafttable.vala  airport.vala  airportcrud.vala  airporttable.vala  approach.vala  approachtable.vala  approachtype.vala  approachtypetable.vala  crew.vala  crewtable.vala  crud.vala  database.vala  date.vala  datetime.vala  duration.vala  flight.vala  flightcrud.vala  flighttable.vala  flighttaggingtable.vala  flighttagtable.vala  glide.vala  glidetable.vala  hold.vala  holdtable.vala  ijoinrecord.vala  ijointable.vala  itagging.vala  itaggingtable.vala  landing.vala  landingtable.vala  launchtype.vala  launchtypetable.vala  logbook.vala  model.vala  modelcrud.vala  modeltable.vala  (+32 more)
oldc/: edctrl.c  edctrl.h  flights.c  logbook.c  models.c  models.h  reports.h  roles.c  roles.h  sqlpilot.c  util.c  util.h
oldc/cb/: cb.h  reports.c  summaries.c
oldc/db/: db.c  db.h
oldtest/: test.c  test.h
oldtest/fixtures/: db.sql
oldtest/units/: util_test.c
po/: POTFILES.in  en_US.po
script/: ccs_schedule.rb  console  gtk-builder-convert
script/import/: ExpressJet
script/report/: time_by_month
script/summary/: experience  legacy  time
sql/: load_extensions.sql  logbook.sql  migrate_iata.sql  migrate_leg.sql  migrate_registry.sql  migrate_tail.sql
sqlite3ext/: Makefile.am  sqlfuncs.c
src/: Makefile.am  aircraft.c  aircraft.h  airports.c  airports.h  appdata.h  blocktime.c  callbacks.h  console.c  db.c  edctrl.c  edctrl.h  flights.c  flights.h  import.c  import.h  importcsv.c  logbook.c  logbook.h  main.c  models.h  reports.c  reports.h  roles.c  roles.h  scripter.c  scripter.h  shell.c  sqlpilot.c  sqlpilot.h  store.c  store.h  summaries.c  summaries.h  tmz.c  tmz.h  types.c  types.h  util.c  util.h
src/cb/: aircraft.c  airports.c  cb.h  flights.c  import.c  models.c  reports.c  roles.c  summaries.c  summary.c  types.c  window.c  window.h
src/db/: db.c  db.h
src/lib/: csv.c  csv.h
src/ui/: callbacks.c  callbacks.h  flights.c  interface.c  interface.h
test/: .gitignore  Makefile.am  runner.sh  test.c  test.csv  test.h  testcsv.vala  testdate.vala  testdatetime.vala  testduration.vala  testlogbook.vala  testtimeofday.vala
test/fixtures/: db.sql
test/units/: db.c  db_test.c  interface.c  interface_test.c  test.c  test_test.c  util.c  util_test.c
vapi/: sqlite3.vapi  stardate.vapi  time.vapi
