 
serviceentry_DATA = sqlpilot.service

desktopentry_DATA = sqlpilot.desktop

icon_26x26_DATA = icons/26x26/sqlpilot.png 
icon_40x40_DATA = icons/40x40/sqlpilot.png
icon_scalable_DATA = icons/scalable/sqlpilot.png

helpfile_engb_DATA = help/en_US/SqlPilot.xml

EXTRA_DIST = $(serviceentry_DATA) $(desktopentry_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_scalable_DATA) $(helpfile_engb_DATA)
